fine tuning some of the spacing and positioning as well as fixing the footer on the portfolio page

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1 {
     border-bottom: solid 3px #efefef;
 }
 
-p {
+#aboutText {
     margin-left: 40px;
 }
 
@@ -77,6 +77,7 @@ footer {
     margin: 0 0 40px;
     width: 50%;
     max-width: 960px;
+    margin-top:10%;
 }
 
 .card-text {
@@ -104,3 +105,4 @@ footer {
     margin-top: 10%;
     margin-right: 32.3%;
 }
+
